--- a/Frontend/products/assets/styles/ProductCatalog.css
+++ b/Frontend/products/assets/styles/ProductCatalog.css
@@ -69,6 +69,7 @@ header {
   align-items: center;
   width: 100%;
   margin: 30px -5px 10px 15px;
+  margin-top: 100px;
 }
 
 .catalog-header-top .filter-bar {
