--- a/Frontend/admin/assets/styles/AdminCategories.css
+++ b/Frontend/admin/assets/styles/AdminCategories.css
@@ -66,6 +66,15 @@ body {
     box-shadow: 0 4px 12px rgba(252, 209, 22, 0.3);
 }
 
+a .landing{
+    text-decoration: none;
+    color: #fff;
+}
+
+a .landing:hover{
+  color: #FCD116;
+}
+
 .sidebar-menu {
     flex: 1;
 }
@@ -141,6 +150,8 @@ body {
 .search-icon {
     color: #999;
     font-size: 1rem;
+    width: 18px;
+    height: 18px;
 }
 
 .search-input {
@@ -193,12 +204,13 @@ body {
     border-radius: 16px;
     padding: 2rem;
     box-shadow: 0 2px 12px rgba(0, 0, 0, 0.05);
+    width: 1100px;
 }
 
 .admin-section-header, .products-header {
     display: flex;
     width: 1000px;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     gap: 20px;
     margin-bottom: 2rem;
@@ -549,7 +561,7 @@ body {
 /* Header */
 .products-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 2rem;
 }
