feat(frontend): connect dashboard to backend

--- a/Frontend/src/styles/admin/admin.css
+++ b/Frontend/src/styles/admin/admin.css
@@ -291,21 +291,19 @@ a .landing:hover{
 
 .categories-table th:last-child {
     text-align: right;
-    width: 1%; /* Trick: shrink this column to fit content */
-    padding-right: 5rem; /* prevent touching edge */
+    width: 1%;
+    padding-right: 5rem; 
 }
 
-/* Table Body */
 .categories-table td {
-    padding: 1.5rem 0; /* More spacing for that "airy" look */
+    padding: 1.5rem 0;
     color: #333;
     font-size: 1rem;
     font-weight: 500;
     border-bottom: 1px solid #F0F0F0;
-    vertical-align: middle; /* Ensures text aligns with buttons */
+    vertical-align: middle; 
 }
 
-/* Actions Cell specific styling */
 .categories-table td:last-child {
     white-space: nowrap;
     padding-right: 1rem;
